k8s-go/deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: goapp
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      containers:
      - name: goapp
        image: aimvector/kube-demo:go-v2
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 0.01
            memory: 300Mi
          limits:
            cpu: 1
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /status
            port: 80
            scheme: HTTP
          initialDelaySeconds: 3
          timeoutSeconds: 5
