k8s-go/deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: goapp
spec:
  selector:
    app: goapp
  #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
