k8s-go/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: goapp
spec:
  rules:
  - host: goapp.com
    http:
      paths:
      - backend:
          serviceName: goapp
          servicePort: 80
        path: /api/v1
  #tls:
  #- hosts:
  #  - goapp.com
  #  secretName: secret-tls-ssl
